  signed integer in PHP instead of string in 32bit systems. (Andrey)
- Fixed initializing and argument checking for posix_mknod(). (Derick)
- Fixed bug #35197 (Destructor is not called). (Tony)
- Fixed bug #35179 (tokenizer extension needs T_HALT_COMPILER). (Greg)
- Fixed bug #35176 (include()/require()/*_once() produce wrong error messages
  about main()). (Dmitry)
- Fixed bug #35142 (SOAP Client/Server Complex Object Support). (Dmitry)
- Fixed bug #35135 (PDOStatment without related PDO object may crash). (Ilia)
- Fixed bug #35091 (SoapClient leaks memory). (Dmitry)
- Fixed bug #35078 (configure does not find ldap_start_tls_s). (Jani)
- Fixed bugs #35022, #35019 (Regression in the behavior of key() and current()
  functions). (Ilia)
- Fixed bug #35017 (Exception thrown in error handler may cause unexpected
  behavior). (Dmitry)
- Fixed bug #35014 (array_product() always returns 0). (Ilia)
- Fixed bug #35009 (ZTS: Persistent resource destruct crashes when extension
  is compiled as shared). (Dmitry)
- Fixed bug #34851 (SO_RECVTIMEO and SO_SNDTIMEO socket options expect integer
  parameter on Windows). (Mike)
- Fixed bug #33720 (mb_encode_mimeheader does not work for multibyte
  chars). (Rui)
- Fixed bug #31971 (ftp_login fails on some SSL servers). 
  (frantisek at augusztin dot com)

28 Oct 2005, PHP 5.1 Release Candidate 4
- Fixed fgetcsv() and fputcsv() inconsistency. (Dmitry)
- Fixed bug #34996 (ImageTrueColorToPalette() crashes when ncolors is 
  zero). (Tony)
- Fixed bug #34982 (array_walk_recursive() modifies elements outside function
  scope). (Dmitry)
- Fixed bug #34977 (Compile failure on MacOSX due to use of varargs.h). (Tony)
- Fixed bug #34968 (bz2 extension fails on to build on some win32 setups).
  (Ilia)
- Fixed bug #34965 (tidy is not binary safe). (Mike)
- Fixed bug #34957 (PHP doesn't respect ACLs for access checks). (Wez)
- Fixed bug #34950 (Unable to get WSDL through proxy). (Dmitry)